<resources>
    <string name="app_name">FoodDeliveryApp-AbbGraduation</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_text">Register</string>
    <string name="register_text_button">Resgister</string>
    <string name="register_info_text">Create your account and order your favourite meal</string>
    <string name="login_info_text">Special discounts to your favourite meals</string>
    <string name="forgot_password_info">You can reset your password</string>
    <string name="forgot_password_info_2">If you clicked "send" button, please check your email (sometimes mail falls in spam box) for reset passsword</string>
    <string name="password_text">Password</string>
    <string name="email_text">Email</string>
    <string name="username_text">Username</string>
    <string name="register_to_login_question">Do you have an account?</string>
    <string name="sign_in_text">Sign in</string>
    <string name="login_text">Login</string>
    <string name="forgot_password_text">Forgot Password</string>
    <string name="login_to_register_text">You have not an account?</string>
    <string name="sign_up_text">Sign up</string>
    <string name="send_text">Send</string>
    <string name="cart_main_text">Orders added to cart</string>
    <string name="submit_cart_text">Submit cart</string>
    <string name="cart_is_empty_text">Cart is empty</string>
    <string name="categories">Categories</string>
    <string name="best_meals">Best Meals</string>
    <string name="home">Home</string>
    <string name="go_to_cart">Go to cart</string>
    <string name="wallet">Wallet</string>
    <string name="saved_foods">Saved Foods</string>
    <string name="log_out">Log out</string>

    <string name="all_category">All</string>
    <string name="meal_category">Meals</string>
    <string name="dessert_category">Desserts</string>
    <string name="drink_category">Drinks</string>
    <string name="liked_food_text">You haven\'t liked any food yet</string>
    <string name="balance_check">Do you want to watch the balance ?</string>
    <string name="log_out_text_from_account">Do you want to log out ?</string>
    <string name="yes_option">Yes</string>
    <string name="no_option">No</string>


</resources>