<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homeFragment"
            android:title="@string/home"
            android:icon="@drawable/home_icon"
            />

        <item
            android:id="@+id/cartFragment"
            android:title="@string/go_to_cart"
            android:icon="@drawable/cart_icon"
            />

        <item
            android:id="@+id/paymentFragment"
            android:title="@string/wallet"
            android:icon="@drawable/card_wallet_icon"
            />

        <item
            android:id="@+id/savedFoodsFragment"
            android:title="@string/saved_foods"
            android:icon="@drawable/saved_icon"
            />
    </group>

    <item
        android:id="@+id/logOut"
        android:title="@string/log_out"
        android:icon="@drawable/log_out_icon"
        />

</menu>