<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.view.register.ForgotPasswordFragment">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/custom_register_selection_background"
        app:layout_constraintBottom_toTopOf="@+id/userEmailInputTextForgotPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="292dp"
        android:layout_height="296dp"
        android:layout_marginTop="-30dp"
        android:layout_marginEnd="-70dp"
        android:scaleType="fitCenter"
        android:src="@drawable/cheese_cake"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.703"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.043" />

    <TextView
        android:id="@+id/forgotPasswordText"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="270dp"
        android:fontFamily="@font/lobster"
        android:text="@string/forgot_password_text"
        android:textColor="@color/mainBlack"
        android:textSize="35sp"
        android:textAlignment="center"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/infoForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/lobster"
        android:text="@string/forgot_password_info"
        android:textColor="@color/mainBlack"
        android:textSize="15sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgotPasswordText" />


    <TextView
        android:id="@+id/info2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/forgot_password_info_2"
        android:textColor="@color/mainGray"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userEmailInputTextForgotPassword" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/userEmailInputTextForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/custom_input_background"
        android:drawableEnd="@drawable/email"
        android:elevation="5dp"
        android:hint="@string/email_text"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoForgotPassword"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/sendButton"
        android:layout_width="210dp"
        android:layout_height="55dp"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="90dp"
        android:backgroundTint="@color/mainOrange_extra_light"
        android:text="@string/send_text"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info2" />
</androidx.constraintlayout.widget.ConstraintLayout>